attempt to quieten sbt output in Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ scala:
 jdk:
 - oraclejdk7
 - openjdk7
+script:
+- sbt ++$TRAVIS_SCALA_VERSION --warn update compile test:compile
+- sbt ++$TRAVIS_SCALA_VERSION test
 notifications:
   flowdock:
     secure: J4wkM5yk5Llrliv2T+/zr6WJkny24nU/oWASHewKBTx9IfeF1EJOSsGAAFTbKCf+DVIVysUwu7fTNnH7+JgPm0OPXmAwSlCxJcMVsutZzdY6CnWpovrVg0FnNV6/Fovz7Npf9SgVh7k1LijHGM7nMcGpFg9pIf5nvtrwytk8K80=
