--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,10 @@ scala:
 jdk:
 - oraclejdk7
 - openjdk7
+install:
+- ./.travis-cache.sh
 script:
-- sbt ++$TRAVIS_SCALA_VERSION --warn update compile test:compile
+- sbt ++$TRAVIS_SCALA_VERSION update compile test:compile
 - sbt ++$TRAVIS_SCALA_VERSION test
 notifications:
   flowdock:
