--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: scala
 scala:
-  - 2.11.8
+  - 2.11.7
+  - 2.10.5
 jdk:
-  - oraclejdk8
   - oraclejdk7
   - openjdk7
 sudo: false
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION -no-share --warn update compile test:compile
-  - sbt ++$TRAVIS_SCALA_VERSION -no-share test
+  - sbt ++$TRAVIS_SCALA_VERSION clean coverage test
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
